src/routes/scss/_section__5.scss
.section__5 {
    background-color: white;
    color: black;
    position: relative;

    h2 {
        margin-block: 0;
        padding-top: 5em;
        margin-left: calc(12.5% + 1em);
        font-size: 1.5rem;
        font-weight: 500;

    }

    &__flexbox {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        gap: 5em;

        &__card {
            width: 75%;
            display: flex;
            justify-content: space-between;
            margin: 0 auto;
            img {
                width: 50%;
                padding: 2em;
                aspect-ratio: 1;
                box-sizing: border-box;
                object-fit: cover;
            }

            &__details {
                display: flex;
                gap: 1rem;
                margin-top: 1.5em;
                align-items: center;
                button {
                    aspect-ratio: 4;
                    height: 3rem;
                    border: black 1px solid;
                    background-color: transparent;
                }
            }
        }

        &__card:nth-child(even) {
            flex-direction: row-reverse;
        }
    }

    @media (max-width: 650px) {
        h2 {
            width: 100%;
            margin-left: 0;
            text-align: center;
        }
        &__flexbox {
            &__card {
                margin-block: 2em;

                padding: 1rem;
                box-sizing: border-box;
                position: relative;
                img {
                    position: absolute;
                    inset: 0;
                    width: 100%;
                    height: 100%;
                    padding: 0;
                    filter: brightness(25%);
                }

                > *:not(img) {
                    position: relative;
                    z-index: 1;
                    color: white;
                }

                button {
                    border: solid 1px white;
                    color: white;
                }
            }
        }
    }

    &::after {
        content: "";
        background: linear-gradient(white 25%, transparent);
        position: absolute;
        bottom: 0;
        transform: translateY(100%);
        left: 0;
        width: 100%;
        height: 25%;
        pointer-events: none;
    }
}

